# shop_site

./: .env  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
Item__Page/: index.html  item-style.css  script.js
LogIn/: LogIn.html  LogIn_style.css
shop_site/: db.sqlite3
shop_site/config/: celery.py  settings.py  urls.py  wsgi.py
shop_site/shop/: admin.py  choices.py  middleware.py  models.py  tasks.py  urls.py  views.py
shop_site/shop/migrations/: 0001_initial.py  0002_headphones_monitor_tv_and_more.py  0002_remove_category_id_alter_category_name.py  0003_adress_banner_comment.py
shop_site/shop/services/: update_user_modal.py
shop_site/shop/static/shop/css/: style.css
shop_site/shop/templates/shop/: 500.html  home.html  product.html
shop_site/shop_site/: celery.py  settings.py  urls.py
shop_site/shop_site/static/base/css/: header.css  header.css.map
shop_site/shop_site/static/base/scss/: header.scss
shop_site/templates/base/: base.html  footer.html  header.html
shop_site/user/: admin.py  auth_backend.py  models.py  urls.py  views.py
shop_site/user/management/commands/: addsuperuser.py
shop_site/user/migrations/: 0001_initial.py  0002_remove_user_photo_user_avatar_user_avatar_url.py  0002_rename_first_name_user_username.py
