[tool.poetry]
name = "shop-site"
version = "0.1.0"
description = ""
authors = ["Romankrasawa <romankrasawa8567@gmail.com>"]
readme = "README.md"
packages = [{include = "shop_site"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"
python-slugify = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
